--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3906,14 +3906,6 @@ section.lazy-placeholder:after {
   padding-bottom: 120px;
   background-image: url("../../../assets/images/phone-mockup.jpg");
 }
-.cid-rD0pXho1aZ {
-  padding-top: 135px;
-  padding-bottom: 90px;
-  background-image: url("../../../assets/images/iot-environmental-1440x900.png");
-}
-.cid-rD0pXho1aZ H1 {
-  text-align: center;
-}
 .cid-rE8Jr3xJrh {
   padding-top: 90px;
   padding-bottom: 90px;
@@ -3972,6 +3964,14 @@ section.lazy-placeholder:after {
     -webkit-flex-basis: 100%;
     padding-bottom: 2rem;
   }
+}
+.cid-rD0pXho1aZ {
+  padding-top: 135px;
+  padding-bottom: 90px;
+  background-image: url("../../../assets/images/iot-environmental-1440x900.png");
+}
+.cid-rD0pXho1aZ H1 {
+  text-align: center;
 }
 .cid-rD0pXgozip {
   background-image: url("../../../assets/images/wp2465563.jpg");
@@ -6158,43 +6158,558 @@ section.lazy-placeholder:after {
     width: 100% !important;
   }
 }
-.cid-rETRXCcO5l {
+.cid-rPVVuAhzum {
+  padding-top: 105px;
+  padding-bottom: 75px;
+  background-image: url("../../../assets/images/iot-environmental-1440x900.png");
+}
+.cid-rPVVuAhzum H1 {
+  text-align: center;
+}
+.cid-rG25ZD2MOi .navbar {
+  padding: .5rem 0;
+  background: #232323;
+  transition: none;
+  min-height: 77px;
+}
+.cid-rG25ZD2MOi .navbar-dropdown.bg-color.transparent.opened {
+  background: #232323;
+}
+.cid-rG25ZD2MOi a {
+  font-style: normal;
+}
+.cid-rG25ZD2MOi .nav-item span {
+  padding-right: 0.4em;
+  line-height: 0.5em;
+  vertical-align: text-bottom;
+  position: relative;
+  text-decoration: none;
+}
+.cid-rG25ZD2MOi .nav-item a {
+  display: -webkit-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.7rem 0 !important;
+  margin: 0rem .65rem !important;
+  -webkit-align-items: center;
+  -webkit-justify-content: center;
+}
+.cid-rG25ZD2MOi .nav-item:focus,
+.cid-rG25ZD2MOi .nav-link:focus {
+  outline: none;
+}
+.cid-rG25ZD2MOi .btn {
+  padding: 0.4rem 1.5rem;
+  display: -webkit-inline-flex;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-rG25ZD2MOi .btn .mbr-iconfont {
+  font-size: 1.6rem;
+}
+.cid-rG25ZD2MOi .menu-logo {
+  margin-right: auto;
+}
+.cid-rG25ZD2MOi .menu-logo .navbar-brand {
+  display: flex;
+  margin-left: 5rem;
+  padding: 0;
+  transition: padding .2s;
+  min-height: 3.8rem;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.cid-rG25ZD2MOi .menu-logo .navbar-brand .navbar-caption-wrap {
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  word-break: break-word;
+  min-width: 7rem;
+  margin: .3rem 0;
+}
+.cid-rG25ZD2MOi .menu-logo .navbar-brand .navbar-caption-wrap .navbar-caption {
+  line-height: 1.2rem !important;
+  padding-right: 2rem;
+}
+.cid-rG25ZD2MOi .menu-logo .navbar-brand .navbar-logo {
+  font-size: 4rem;
+  transition: font-size 0.25s;
+}
+.cid-rG25ZD2MOi .menu-logo .navbar-brand .navbar-logo img {
+  display: flex;
+}
+.cid-rG25ZD2MOi .menu-logo .navbar-brand .navbar-logo .mbr-iconfont {
+  transition: font-size 0.25s;
+}
+.cid-rG25ZD2MOi .menu-logo .navbar-brand .navbar-logo a {
+  display: inline-flex;
+}
+.cid-rG25ZD2MOi .navbar-toggleable-sm .navbar-collapse {
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+  padding-right: 5rem;
+  width: auto;
+}
+.cid-rG25ZD2MOi .navbar-toggleable-sm .navbar-collapse .navbar-nav {
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  padding-left: 0;
+}
+.cid-rG25ZD2MOi .navbar-toggleable-sm .navbar-collapse .navbar-nav .nav-item {
+  -webkit-align-self: center;
+  align-self: center;
+}
+.cid-rG25ZD2MOi .navbar-toggleable-sm .navbar-collapse .navbar-buttons {
+  padding-left: 0;
+  padding-bottom: 0;
+}
+.cid-rG25ZD2MOi .dropdown .dropdown-menu {
+  background: #232323;
+  display: none;
+  position: absolute;
+  min-width: 5rem;
+  padding-top: 1.4rem;
+  padding-bottom: 1.4rem;
+  text-align: left;
+}
+.cid-rG25ZD2MOi .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  padding: 0.235em 1.5385em 0.235em 1.5385em !important;
+}
+.cid-rG25ZD2MOi .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-rG25ZD2MOi .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+}
+.cid-rG25ZD2MOi .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-rG25ZD2MOi .navbar-toggleable-sm.opened:after {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  content: '';
+  background-color: rgba(0, 0, 0, 0.1);
+  left: 0;
+  bottom: 0;
+  transform: translateY(100%);
+  -webkit-transform: translateY(100%);
+  z-index: 1000;
+}
+.cid-rG25ZD2MOi .navbar.navbar-short {
+  min-height: 60px;
+  transition: all .2s;
+}
+.cid-rG25ZD2MOi .navbar.navbar-short .navbar-toggler-right {
+  top: 20px;
+}
+.cid-rG25ZD2MOi .navbar.navbar-short .navbar-logo a {
+  font-size: 2.5rem !important;
+  line-height: 2.5rem;
+  transition: font-size 0.25s;
+}
+.cid-rG25ZD2MOi .navbar.navbar-short .navbar-logo a .mbr-iconfont {
+  font-size: 2.5rem !important;
+}
+.cid-rG25ZD2MOi .navbar.navbar-short .navbar-logo a img {
+  height: 3rem !important;
+}
+.cid-rG25ZD2MOi .navbar.navbar-short .navbar-brand {
+  min-height: 3rem;
+}
+.cid-rG25ZD2MOi button.navbar-toggler {
+  width: 31px;
+  height: 18px;
+  cursor: pointer;
+  transition: all .2s;
+  top: 1.5rem;
+  right: 1rem;
+}
+.cid-rG25ZD2MOi button.navbar-toggler:focus {
+  outline: none;
+}
+.cid-rG25ZD2MOi button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #232323;
+}
+.cid-rG25ZD2MOi button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all .2s;
+}
+.cid-rG25ZD2MOi button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-rG25ZD2MOi button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-rG25ZD2MOi button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all .2s;
+}
+.cid-rG25ZD2MOi nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-rG25ZD2MOi nav.opened .hamburger span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  transition: all .25s;
+}
+.cid-rG25ZD2MOi nav.opened .hamburger span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  transition: all .25s;
+}
+.cid-rG25ZD2MOi nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-rG25ZD2MOi .collapsed.navbar-expand {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-rG25ZD2MOi .collapsed .btn {
+  display: -webkit-flex;
+}
+.cid-rG25ZD2MOi .collapsed .navbar-collapse {
+  display: none !important;
+  padding-right: 0 !important;
+}
+.cid-rG25ZD2MOi .collapsed .navbar-collapse.collapsing,
+.cid-rG25ZD2MOi .collapsed .navbar-collapse.show {
+  display: block !important;
+}
+.cid-rG25ZD2MOi .collapsed .navbar-collapse.collapsing .navbar-nav,
+.cid-rG25ZD2MOi .collapsed .navbar-collapse.show .navbar-nav {
+  display: block;
+  text-align: center;
+}
+.cid-rG25ZD2MOi .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item,
+.cid-rG25ZD2MOi .collapsed .navbar-collapse.show .navbar-nav .nav-item {
+  clear: both;
+}
+.cid-rG25ZD2MOi .collapsed .navbar-collapse.collapsing .navbar-buttons,
+.cid-rG25ZD2MOi .collapsed .navbar-collapse.show .navbar-buttons {
+  text-align: center;
+}
+.cid-rG25ZD2MOi .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
+.cid-rG25ZD2MOi .collapsed .navbar-collapse.show .navbar-buttons:last-child {
+  margin-bottom: 1rem;
+}
+.cid-rG25ZD2MOi .collapsed button.navbar-toggler {
+  display: block;
+}
+.cid-rG25ZD2MOi .collapsed .navbar-brand {
+  margin-left: 1rem !important;
+}
+.cid-rG25ZD2MOi .collapsed .navbar-toggleable-sm {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-rG25ZD2MOi .collapsed .dropdown .dropdown-menu {
+  width: 100%;
+  text-align: center;
+  position: relative;
+  opacity: 0;
+  display: block;
+  height: 0;
+  visibility: hidden;
+  padding: 0;
+  transition-duration: .5s;
+  transition-property: opacity,padding,height;
+}
+.cid-rG25ZD2MOi .collapsed .dropdown.open > .dropdown-menu {
+  position: relative;
+  opacity: 1;
+  height: auto;
+  padding: 1.4rem 0;
+  visibility: visible;
+}
+.cid-rG25ZD2MOi .collapsed .dropdown .dropdown-submenu {
+  left: 0;
+  text-align: center;
+  width: 100%;
+}
+.cid-rG25ZD2MOi .collapsed .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+  margin-top: 0;
+  position: inherit;
+  right: 0;
+  top: 50%;
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin-left: .3em;
+  vertical-align: middle;
+  content: "";
+  border-top: .30em solid;
+  border-right: .30em solid transparent;
+  border-left: .30em solid transparent;
+}
+@media (max-width: 991px) {
+  .cid-rG25ZD2MOi .navbar-expand {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-rG25ZD2MOi img {
+    height: 3.8rem !important;
+  }
+  .cid-rG25ZD2MOi .btn {
+    display: -webkit-flex;
+  }
+  .cid-rG25ZD2MOi button.navbar-toggler {
+    display: block;
+  }
+  .cid-rG25ZD2MOi .navbar-brand {
+    margin-left: 1rem !important;
+  }
+  .cid-rG25ZD2MOi .navbar-toggleable-sm {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-rG25ZD2MOi .navbar-collapse {
+    display: none !important;
+    padding-right: 0 !important;
+  }
+  .cid-rG25ZD2MOi .navbar-collapse.collapsing,
+  .cid-rG25ZD2MOi .navbar-collapse.show {
+    display: block !important;
+  }
+  .cid-rG25ZD2MOi .navbar-collapse.collapsing .navbar-nav,
+  .cid-rG25ZD2MOi .navbar-collapse.show .navbar-nav {
+    display: block;
+    text-align: center;
+  }
+  .cid-rG25ZD2MOi .navbar-collapse.collapsing .navbar-nav .nav-item,
+  .cid-rG25ZD2MOi .navbar-collapse.show .navbar-nav .nav-item {
+    clear: both;
+  }
+  .cid-rG25ZD2MOi .navbar-collapse.collapsing .navbar-buttons,
+  .cid-rG25ZD2MOi .navbar-collapse.show .navbar-buttons {
+    text-align: center;
+  }
+  .cid-rG25ZD2MOi .navbar-collapse.collapsing .navbar-buttons:last-child,
+  .cid-rG25ZD2MOi .navbar-collapse.show .navbar-buttons:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-rG25ZD2MOi .dropdown .dropdown-menu {
+    width: 100%;
+    text-align: center;
+    position: relative;
+    opacity: 0;
+    display: block;
+    height: 0;
+    visibility: hidden;
+    padding: 0;
+    transition-duration: .5s;
+    transition-property: opacity,padding,height;
+  }
+  .cid-rG25ZD2MOi .dropdown.open > .dropdown-menu {
+    position: relative;
+    opacity: 1;
+    height: auto;
+    padding: 1.4rem 0;
+    visibility: visible;
+  }
+  .cid-rG25ZD2MOi .dropdown .dropdown-submenu {
+    left: 0;
+    text-align: center;
+    width: 100%;
+  }
+  .cid-rG25ZD2MOi .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+    margin-top: 0;
+    position: inherit;
+    right: 0;
+    top: 50%;
+    display: inline-block;
+    width: 0;
+    height: 0;
+    margin-left: .3em;
+    vertical-align: middle;
+    content: "";
+    border-top: .30em solid;
+    border-right: .30em solid transparent;
+    border-left: .30em solid transparent;
+  }
+}
+@media (min-width: 767px) {
+  .cid-rG25ZD2MOi .menu-logo {
+    flex-shrink: 0;
+    -webkit-flex-shrink: 0;
+  }
+}
+.cid-rG25ZD2MOi .navbar-collapse {
+  flex-basis: auto;
+  -webkit-flex-basis: auto;
+}
+.cid-rG25ZD2MOi .nav-link:hover,
+.cid-rG25ZD2MOi .dropdown-item:hover {
+  color: #c1c1c1 !important;
+}
+.cid-rG25ZDxiLI {
+  padding-top: 120px;
+  padding-bottom: 120px;
+  background-image: url("../../../assets/images/phone-mockup.jpg");
+}
+.cid-rG25ZEERda {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-rG25ZEERda .mbr-section-subtitle {
+  color: #767676;
+  text-align: center;
+  font-weight: 300;
+}
+.cid-rG25ZEERda .step {
+  width: 64px;
+  height: 64px;
+  font-size: 32px;
+  border-radius: 50%;
+  border: 2px solid #efefef;
+}
+@media (max-width: 767px) {
+  .cid-rG25ZEERda .step {
+    width: 48px;
+    height: 48px;
+    font-size: 24px;
+  }
+}
+.cid-rG25ZEERda .separline {
+  position: relative;
+}
+.cid-rG25ZEERda .separline:after {
+  top: 68px;
+  left: 30px;
+  position: absolute;
+  content: "";
+  width: 2px;
+  height: calc(100% - (32px + 4px) * 2);
+  background-color: #efefef;
+}
+@media (max-width: 767px) {
+  .cid-rG25ZEERda .separline:after {
+    top: 52px;
+    left: 22px;
+    height: calc(100% - 56px);
+  }
+}
+.cid-rPVVcHP9K8 {
+  padding-top: 105px;
+  padding-bottom: 75px;
+  background-image: url("../../../assets/images/iot-environmental-1440x900.png");
+}
+.cid-rPVVcHP9K8 H1 {
+  text-align: center;
+}
+.cid-rG28kqrixW {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-rG28kqrixW .mbr-section-subtitle {
+  color: #767676;
+  text-align: center;
+  font-weight: 300;
+}
+.cid-rG28kqrixW .step {
+  width: 64px;
+  height: 64px;
+  font-size: 32px;
+  border-radius: 50%;
+  border: 2px solid #efefef;
+}
+@media (max-width: 767px) {
+  .cid-rG28kqrixW .step {
+    width: 48px;
+    height: 48px;
+    font-size: 24px;
+  }
+}
+.cid-rG28kqrixW .separline {
+  position: relative;
+}
+.cid-rG28kqrixW .separline:after {
+  top: 68px;
+  left: 30px;
+  position: absolute;
+  content: "";
+  width: 2px;
+  height: calc(100% - (32px + 4px) * 2);
+  background-color: #efefef;
+}
+@media (max-width: 767px) {
+  .cid-rG28kqrixW .separline:after {
+    top: 52px;
+    left: 22px;
+    height: calc(100% - 56px);
+  }
+}
+.cid-rG28kqrixW .media-block {
+  flex-shrink: 0;
+  -webkit-flex-shrink: 0;
+}
+@media (min-width: 992px) {
+  .cid-rG28kqrixW .media-block {
+    padding-right: 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-rG28kqrixW .media-block {
+    flex-basis: 100%;
+    -webkit-flex-basis: 100%;
+    padding-bottom: 2rem;
+  }
+}
+.cid-rG25ZFunOE {
   padding-top: 75px;
   padding-bottom: 45px;
   background-image: url("../../../assets/images/night-road-sky-2000x1125.jpg");
 }
 @media (max-width: 767px) {
-  .cid-rETRXCcO5l .content {
+  .cid-rG25ZFunOE .content {
     text-align: center;
   }
-  .cid-rETRXCcO5l .content > div:not(:last-child) {
+  .cid-rG25ZFunOE .content > div:not(:last-child) {
     margin-bottom: 2rem;
   }
 }
 @media (max-width: 767px) {
-  .cid-rETRXCcO5l .media-wrap {
+  .cid-rG25ZFunOE .media-wrap {
     margin-bottom: 1rem;
   }
 }
-.cid-rETRXCcO5l .media-wrap .mbr-iconfont-logo {
+.cid-rG25ZFunOE .media-wrap .mbr-iconfont-logo {
   font-size: 7.5rem;
   color: #f36;
 }
-.cid-rETRXCcO5l .media-wrap img {
+.cid-rG25ZFunOE .media-wrap img {
   height: 6rem;
 }
 @media (max-width: 767px) {
-  .cid-rETRXCcO5l .footer-lower .copyright {
+  .cid-rG25ZFunOE .footer-lower .copyright {
     margin-bottom: 1rem;
     text-align: center;
   }
 }
-.cid-rETRXCcO5l .footer-lower hr {
+.cid-rG25ZFunOE .footer-lower hr {
   margin: 1rem 0;
   border-color: #fff;
   opacity: .05;
 }
-.cid-rETRXCcO5l .footer-lower .social-list {
+.cid-rG25ZFunOE .footer-lower .social-list {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
@@ -6203,24 +6718,24 @@ section.lazy-placeholder:after {
   justify-content: flex-end;
   -webkit-justify-content: flex-end;
 }
-.cid-rETRXCcO5l .footer-lower .social-list .mbr-iconfont-social {
+.cid-rG25ZFunOE .footer-lower .social-list .mbr-iconfont-social {
   font-size: 1.3rem;
   color: #fff;
 }
-.cid-rETRXCcO5l .footer-lower .social-list .soc-item {
+.cid-rG25ZFunOE .footer-lower .social-list .soc-item {
   margin: 0 .5rem;
 }
-.cid-rETRXCcO5l .footer-lower .social-list a {
+.cid-rG25ZFunOE .footer-lower .social-list a {
   margin: 0;
   opacity: .5;
   -webkit-transition: .2s linear;
   transition: .2s linear;
 }
-.cid-rETRXCcO5l .footer-lower .social-list a:hover {
+.cid-rG25ZFunOE .footer-lower .social-list a:hover {
   opacity: 1;
 }
 @media (max-width: 767px) {
-  .cid-rETRXCcO5l .footer-lower .social-list {
+  .cid-rG25ZFunOE .footer-lower .social-list {
     justify-content: center;
     -webkit-justify-content: center;
   }
